--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_bloc: ^4.0.0
   dio: ^3.0.9
   auto_route: ^0.5.0
+  shimmer: ^1.1.1
 
 dev_dependencies:
   flutter_test:
